[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marimo"
description = "A library for making reactive notebooks and apps"
dynamic = ["version"]
# We try to keep dependencies to a minimum, to avoid conflicts with
# user environments;we need a very compelling reason for each dependency added.
# Dependencies should have lower bounds, which should be as loose as possible.
dependencies = [
    # For maintainable cli
    "click>=8.0,<9",
    # code completion
    "jedi>=0.18.0",
    # compile markdown to html
    "markdown>=3.4,<4",
    # add features to markdown
    # Pinned to specific version for introduction of codeblock handling.
    "pymdown-extensions>=10.11.2,<11",
    # syntax highlighting of code in markdown
    "pygments>=2.13,<3",
    # for reading, writing configs
    "tomlkit>= 0.12.0",
    # for managing frontmatter headers in markdown
    "pyyaml>=6.0",
    # web server
    # - 0.22.0 introduced timeout-graceful-shutdown, which we use
    "uvicorn >= 0.22.0",
    # web framework
    # - 0.26.1 introduced lifespans, which we use
    # - starlette 0.36.0 introduced a bug
    "starlette>=0.26.1,!=0.36.0",
    # websockets for use with starlette, and for lsp
    "websockets >= 10.0.0",
    # loro for collaborative editing
    "loro>=1.5.0; python_version >= '3.11'",
    # python <=3.10 compatibility
    "typing_extensions>=4.4.0; python_version < '3.11'",
    # for rst parsing; lowerbound determined by awscli requiring < 0.17,
    "docutils>=0.16.0",
    # to show RAM, CPU usage, other system utilities
    "psutil>=5.0",
    # required dependency in Starlette for SessionMiddleware support
    "itsdangerous>=2.0.0",
    # for dataframe support
    "narwhals>=1.12.0",
    # for packaging.version; not sure what the lower bound is.
    "packaging",
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
]

[project.scripts]
marimo = "marimo._cli.cli:main"

[project.urls]
homepage = "https://github.com/marimo-team/marimo"

[project.entry-points."docstring_to_markdown"]
marimo_converter = "marimo._utils.docs:MarimoConverter"

[project.entry-points."pylsp"]
marimo_plugin = "marimo._server.lsp"

[project.optional-dependencies]
sql = [
    "duckdb>=1.0.0",
    "polars[pyarrow]>=1.9.0",
    "sqlglot>=23.4"
]

# List of deps that are recommended for most users
# in order to unlock all features in marimo
# This includes the `sql` deps
recommended = [
    "duckdb>=1.0.0",            # SQL cells
    "altair>=5.4.0",            # Plotting in datasource viewer
    "polars[pyarrow]>=1.9.0",   # SQL output back in Python
    "sqlglot>=23.4",            # SQL cells parsing
    "openai>=1.55.3",           # AI features
    "ruff",                     # Formatting
    "nbformat>=5.7.0",          # Export as IPYNB
]

dev = [
    "click>=8.0,<9",
    "black~=23.12.1",
    # For tracing debugging
    "opentelemetry-api~=1.26.0",
    "opentelemetry-sdk~=1.26.0",
    # For SQL
    "duckdb>=1.0.0",
    "sqlglot>=23.4",
    # For linting
    "ruff~=0.9.1",
    # For AI
    "openai>=1.55.3",
]

lsp = [
    "python-lsp-server>=1.10.0",
    "python-lsp-ruff>=2.0.0",
]

docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.49",
    "mkdocstrings[python]>=0.27.0",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocs-autorefs>=1.2.0",
    "mkdocs-git-revision-date-localized-plugin>=1.3.0",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-glightbox>=0.4.0",
    "mkdocs-macros-plugin>=1.3.7",
    "mkdocs-redirects>=1.2.2",
    "mkdocs-click>=0.8.1",
    "mike>=2.0.0",  # for versioning
    "pillow>=10.2.0",  # for social cards
    "cairosvg>=2.7.1",  # for social cards
    "mdx-include>=1.4.2",
    "pymdown-extensions>=10.7",
]

[tool.hatch]
installer = "uv"

[tool.hatch.build.hooks.custom]
path = "build_hook.py"

[tool.hatch.version]
path = "marimo/__init__.py"

[tool.hatch.build.targets.sdist]
include = ["/marimo"]
artifacts = ["marimo/_static/", "marimo/_lsp/", "third_party.txt", "third_party_licenses.txt"]
exclude = ["marimo/_smoke_tests"]
force-include = { "build_hook.py" = "build_hook.py" }

[tool.hatch.build.targets.wheel]
include = ["/marimo"]
artifacts = ["marimo/_static/", "marimo/_lsp/", "third_party.txt", "third_party_licenses.txt"]
exclude = ["marimo/_smoke_tests"]
force-include = { "build_hook.py" = "build_hook.py" }

# Override the default uv version to use the latest version
[tool.hatch.envs.hatch-uv]
dependencies = ["uv>=0.4.17"]

[tool.hatch.envs.default]
features = ["dev"]
python = "3.12"
installer = "uv"
dependencies = [
    "uv>=0.4.17", # so we can bump the version used by hatch
    # Typo checking
    "typos~=1.23.6",
]

[tool.hatch.envs.default.scripts]
lint = "ruff check --fix"
lint-unsafe = "ruff check --fix --unsafe-fixes"
format = "ruff format"

[tool.hatch.envs.typecheck]
python = "3.12"
installer = "uv"
dependencies = [
    "mypy~=1.15.0",
    # Types for mypy
    "altair>=5.4.0",
    "leafmap~=0.39.2",
    "panel~=1.5.3",
    "polars~=1.9.0",
    "narwhals>=1.12.0",
    "matplotlib>=3.8.0",
    "sqlglot>=23.4",
    "sqlalchemy>=2.0.40",
    "loro>=1.5.0",
    "python-lsp-server>=1.12.1",
    "pandas-stubs>=1.5.3.230321",
    "pyiceberg>=0.9.0",
    "litellm>=1.70.0",
    "python-dotenv>=1.0.1",
    "types-Pillow~=10.2.0.20240520",
    "types-Pygments~=2.18.0.20240506",
    "types-psutil~=5.9.5.20240516",
    "types-redis~=4.6.0.20241004",
    "types-Markdown~=3.6.0.20240316",
    "types-PyYAML~=6.0.12.20240808",
]

[tool.hatch.envs.typecheck.scripts]
# tutorials shouldn't be type-checked (should be excluded), but they get
# included due to import following; so ensure tutorial imports are type
# ignored.
check = "mypy marimo --exclude=marimo/_tutorials/"
tutorials = "mypy marimo/_tutorials"

[tool.hatch.envs.test]
extra-dependencies = [
    "hypothesis~=6.102.1",
    # For server testing
    "httpx~=0.27.0",
    "matplotlib~=3.9.2",
    "pytest~=8.3.4",
    "pytest-timeout~=2.3.1",
    "pytest-codecov~=0.6.1",
    "pytest-asyncio~=0.26.0",
]

[[tool.hatch.envs.test.matrix]]
python = ["3.9", "3.10", "3.11", "3.12", "3.13"]

[tool.hatch.envs.test.scripts]
test = "pytest{env:HATCH_TEST_ARGS:} {args:tests}"
default = "pytest{env:HATCH_TEST_ARGS:} {args:tests}"
# This is used externally from the narwhals repo to run our tests from their repo.
# This should include any tests that may use narwhals.
# It is ok if we test more than narwhals here, but we should not test less.
test-narwhals = """
    pytest{env:HATCH_TEST_ARGS:} \
        tests/_data/ \
        tests/_plugins/ui/_impl/ \
        tests/_utils/test_narwhals_utils.py
"""

[tool.hatch.envs.test-optional]
template = "test"
extra-dependencies = [
    "hypothesis~=6.102.1",
    "httpx~=0.27.0",
    "matplotlib~=3.9.2",
    "pytest~=8.3.4",
    "pytest-timeout~=2.3.1",
    "pytest-codecov~=0.6.1",
    "pytest-asyncio~=0.26.0",
    "python-lsp-server>=1.10.0",
    # For testing mo.ui.chart, table, ...
    "vl-convert-python",
    "vegafusion",
    "pyarrow>=19.0.1",
    "pyarrow_hotfix",
    "altair>=5.4.0",
    "polars>=1.30.0",
    "sqlglot>=23.4",
    "sqlalchemy>=2.0.40",
    "pyiceberg>=0.9.0",
    # For testing clickhouse
    "chdb>=3; platform_system != 'Windows'", # there is no suitable wheel for windows
    "clickhouse-connect>=0.8.17",
    "pandas>=1.5.3",
    "hvplot~=0.11.2",
    # Causes issues installing `shapely` (v2.0.7)
    # "geopandas~=1.0.1; python_version > '3.9'",
    # FOr testing sql
    "ibis-framework[duckdb]>=10.3.0; python_version > '3.9'",
    # For testing mo.image
    "pillow~=10.4.0",
    "anywidget~=0.9.18",
    "ipython~=8.12.3",
    # testing gen ai
    "openai>=1.55.3",
    "anthropic==0.34.1",
    "google-generativeai==0.8.5",
    "boto3>=1.38.19",
    "litellm>=1.70.0",
    # exporting as ipynb
    "nbformat >=5.10.4",
    "sympy>=1.13.3",
    # For standard scientific computing/ ML
    "jax>=0.4.0; python_version == '3.12'",
    "torch>=2.4.0; python_version == '3.12'",
    "scikit-bio>=0.6.3; python_version == '3.12'",
]

[[tool.hatch.envs.test-optional.matrix]]
python = ["3.9", "3.10", "3.11", "3.12", "3.13"]

[tool.hatch.envs.docs]
features = ["docs"]
dependencies = [
    "marimo_docs @ file://docs",
]

[tool.uv.sources]
marimo_docs = { path = "./docs", editable = true }

[tool.hatch.envs.docs.scripts]
build = "mkdocs build {args}"
serve = "mkdocs serve --clean {args}"
deploy = "mkdocs gh-deploy --force {args}"

[tool.ruff]
line-length = 79
target-version = "py39"
include = ["marimo/**/*.py", "tests/**/*.py", "dagger/**/*.py"]
exclude = [
    "examples",
    "scripts",
    "marimo/_tutorials",
    "marimo/_snippets/data",
    "marimo/_smoke_tests",
    "marimo/_test_utils/codegen_data",
    "marimo/_test_utils/_tutorials",
    "marimo/_static/files/wasm-intro.py",
    "tests/_ast/app_data",
    "tests/_ast/codegen_data",
    "tests/_ast/cell_data",
    "tests/_cli/cli_data",
    "tests/_cli/ipynb_data",
    "tests/_runtime/runtime_data",
    "tests/_ast/test_app.py",
    "frontend",
    "docs",
    "build",
]

[tool.ruff.lint]
preview = true
ignore = [
    "G004",   # Logging statement uses f-string
    "TC001", # Move application import into a type-checking block
    "TC006", # Add quotes to type expression in typing.cast()
    "D301",   # Use r""" if any backslashes in a docstring
    "PERF203", # try-except within a loop incurs performance overhead; not always possible
    "PERF401", # Use {message_str} to create a transformed list; at the cost of readability
    "PERF403", # Use a dictionary comprehension instead of a for-loop; at the cost of readability
    # TODO: we should fix these, and enable this rule
    "PT011", # `pytest.raises(ValueError)` is too broad, set the `match` parameter or use a more specific exception
    "E501",  # Line too long, we still trim
    "D415", # First line should end with a period, question mark, or exclamation point
    "FA102", # Use `from __future__ import annotations`
    "UP007", # Use X | Y for type annotations, not supported in 3.9
    "UP045", # Use X | None for optional type annotations, not supported in 3.9
]
extend-select = [
    # pyflakes
    "F",
    # pycodestyle
    "E",
    # warning
    "W",
    # flake8 builtin-variable-shadowing
    "A001",
    # flake8 builtin-argument-shadowing
    "A002",
    # flake8-unused-arguments
    "ARG",
    # flake8-bugbear
    "B",
    # Performance
    "PERF",
    "ANN002", # missing-type-args
    "ANN003", # missing-type-kwargs
    "ANN201", # missing-return-type-undocumented-public-function
    "ANN202", # missing-return-type-private-function
    "ANN205", # missing-return-type-static-method
    "ANN206", # missing-return-type-class-method
    # isort
    "I001",
    # Enable entire ruff rule section
    "ASYNC", # subset of flake8-async rules
    "TCH",   # Rules around TYPE_CHECKING blocks
    "G",     # flake8-logging-format rules
    "LOG",   # flake8-logging rules, most of them autofixable
    "PT",    # flake8-pytest-style rules
    "TID25", # flake8-tidy-imports rules
    # Per rule enables
    # "RUF100", # Unused noqa (auto-fixable)
    # We ignore more pydocstyle than we enable, so be more selective at what we enable
    # "D101", # Missing docstring in public class
    "D106",
    # "D2",
    "D3",
    # "D400", # First line should end with a period
    # "D401", # First line of docstring should be in imperative mood
    "D402",
    "D403",
    "D412",
    "D419",
    "PGH004", # Use specific rule codes when using noqa
    "PGH005", # Invalid unittest.mock.Mock methods/attributes/properties
    # "S101", # Checks use `assert` outside the test cases, test cases should be added into the exclusions
    "B004",   # Checks for use of hasattr(x, "__call__") and replaces it with callable(x)
    "B006",   # Checks for uses of mutable objects as function argument defaults.
    "B017",   # Checks for pytest.raises context managers that catch Exception or BaseException.
    "B019",   # Use of functools.lru_cache or functools.cache on methods can lead to memory leaks
    "TRY002", # Prohibit use of `raise Exception`, use specific exceptions instead.
    "T201",   # No print statements
    "D3",  # pydocstyle Quotes Issues
    "D4",  # pydocstyle Docstring Content Issues
    "D207",  # Docstring is under-indented
    "D208",  # Docstring is over-indented
    "D210",  # No whitespaces allowed surrounding docstring text
    "D211",  # No blank lines allowed before class docstring
    "D214",  # Section is over-indented
    "D215",  # Section underline is over-indented
    "PLW1514", # Unspecified encoding in open()
    "UP",  # Upgrades
]

# Never try to fix `F401` (unused imports).
unfixable = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"**/{tests}/*" = ["ANN201", "ANN202", "T201", "D", "F841", "PLW1514"]
"dagger/*" = ["TID252"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
combine-as-imports = true

[tool.ruff.lint.flake8-type-checking]
exempt-modules = ["typing", "typing_extensions"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.flake8-tidy-imports]
# Disallow all relative imports.
ban-relative-imports = "all"
# Ban certain modules from being imported at module level, instead requiring
# that they're imported lazily (e.g., within a function definition).
banned-module-level-imports = [
    "altair",
    "anywidget",
    "chdb",
    "clickhouse_connect",
    "duckdb",
    "ipython",
    "numpy",
    "packaging",
    "pandas",
    "polars",
    "pyarrow",
    "redis",
    "sqlalchemy",
    "sqlglot",
    "tomlkit",
    "typing_extensions",
]

[tool.ruff.lint.flake8-pytest-style]
mark-parentheses = false
fixture-parentheses = false

[tool.mypy]
strict = true
exclude = [
    'examples',
    'tests/_ast/app_data',
    'tests/_ast/codegen_data',
    'tests/_ast/cell_data',
    'tests/_cli/cli_data',
    'tests/_cli/ipynb_data',
    'tests/_runtime/runtime_data',
    'marimo/_snippets/data/',
    'marimo/_smoke_tests/',
]
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = "pylsp"
# until https://github.com/python-lsp/python-lsp-server/pull/641 is released
follow_untyped_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q -v --ignore tests/_cli/ipynb_data --ignore tests/_ast/codegen_data --ignore tests/_ast/app_data"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
timeout = 30 # seconds, per test

[tool.coverage.run]
omit = ["marimo/_tutorials/*"]

[tool.typos.default]
extend-ignore-re = ["[0-9a-zA-Z]{43}"]

[tool.typos.default.extend-words]
wheres = "wheres"
Ue = "Ue"         # Used in one of the cell IDs
Nd = "Nd"         # Confused with And
pn = "pn"         # Panel

[tool.typos.files]
extend-exclude = [
    "MultiSelectPlugin.test.ts",
    "module_name_to_pypi_name.py",
    "**/pnpm-lock.yaml",
    "**/snapshots/*",
    "**/__demo__/*",
    "base64.test.ts",
]

[tool.black]
line-length = 79

[tool.marimo.ai]
rules = "- prefer polars over pandas\n- make charts using altair"

[tool.marimo.save]
autosave_delay = 1000
autosave = "after_delay"
format_on_save = true

[tool.marimo.experimental]
multi_column = true

[tool.marimo.display]
dataframes = "rich"

[tool.marimo.runtime]
watcher_on_save = "autorun"
output_max_bytes = 10_000_000
std_stream_max_bytes = 2_000_000
dotenv = [".env"]

[tool.marimo.package_management]
manager = "uv"

[tool.marimo.keymap]
vimrc = "configs/.vimrc"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.dependencies]
nodejs = "22.*"
pnpm = "10.*"
hatch = ">=1.14.0,<2"
make = ">=4.4.1,<5"
pre_commit = ">=4.2.0,<5"
uv = ">=0.6.12,<0.7"
python = "3.12.*"
pip = ">=25.0.1,<26"
